Editing and editing

--- a/script/references.bib
+++ b/script/references.bib
@@ -689,3 +689,152 @@
 	url = {https://www.jstor.org/stable/4132319},
 	note = {Publisher: Management Information Systems Research Center, University of Minnesota}
 }
+
+@article{asmussen2019a,
+	title = {Smart literature review: a practical topic modelling approach to exploratory literature review},
+	author = {Asmussen, Claus Boye and {Møller}, Charles},
+	year = {2019},
+	month = {12},
+	date = {2019-12-01},
+	journal = {Journal of Big Data},
+	pages = {1--18},
+	volume = {6},
+	number = {1},
+	doi = {10.1186/S40537-019-0255-7/TABLES/6},
+	url = {https://journalofbigdata.springeropen.com/articles/10.1186/s40537-019-0255-7},
+	note = {Publisher: SpringerOpen}
+}
+
+@article{asmussen2019a,
+	title = {Smart literature review: a practical topic modelling approach to exploratory literature review},
+	author = {Asmussen, Claus Boye and {Møller}, Charles},
+	year = {2019},
+	month = {12},
+	date = {2019-12-01},
+	journal = {Journal of Big Data},
+	pages = {1--18},
+	volume = {6},
+	number = {1},
+	doi = {10.1186/S40537-019-0255-7/TABLES/6},
+	url = {https://journalofbigdata.springeropen.com/articles/10.1186/s40537-019-0255-7},
+	note = {Publisher: SpringerOpen}
+}
+
+@article{blei2003,
+	title = {Latent dirichlet allocation},
+	author = {Blei, David M. and Ng, Andrew Y. and Jordan, Michael I.},
+	year = {2003},
+	month = {03},
+	date = {2003-03-01},
+	journal = {The Journal of Machine Learning Research},
+	pages = {993{\textendash}1022},
+	volume = {3},
+	number = {null}
+}
+
+@article{blei2003,
+	title = {Latent dirichlet allocation},
+	author = {Blei, David M. and Ng, Andrew Y. and Jordan, Michael I.},
+	year = {2003},
+	month = {03},
+	date = {2003-03-01},
+	journal = {The Journal of Machine Learning Research},
+	pages = {993{\textendash}1022},
+	volume = {3},
+	number = {null}
+}
+
+@article{blei2003a,
+	title = {Latent dirichlet allocation},
+	author = {Blei, David M. and Ng, Andrew Y. and Jordan, Michael I.},
+	year = {2003},
+	month = {03},
+	date = {2003-03-01},
+	journal = {The Journal of Machine Learning Research},
+	pages = {993{\textendash}1022},
+	volume = {3},
+	number = {null}
+}
+
+@article{kogan2019,
+	title = {Technology-Skill Complementarity and Labor Displacement: Evidence from Linking Two Centuries of Patents with Occupations},
+	author = {Kogan, Leonid and Papanikolaou, Dimitris and Schmidt, Lawrence and Seegmiller, Bryan},
+	year = {2019},
+	month = {12},
+	date = {2019-12-26},
+	doi = {10.2139/ssrn.3585676},
+	url = {https://papers.ssrn.com/abstract=3585676},
+	langid = {en}
+}
+
+@article{maier2018,
+	title = {Applying LDA Topic Modeling in Communication Research: Toward a Valid and Reliable Methodology},
+	author = {Maier, Daniel and Waldherr, A. and Miltner, P. and Wiedemann, G. and Niekler, A. and Keinert, A. and Pfetsch, B. and Heyer, G. and Reber, U. and {Häussler}, T. and Schmid-Petri, H. and Adam, S.},
+	year = {2018},
+	month = {04},
+	date = {2018-04-03},
+	journal = {Communication Methods and Measures},
+	pages = {93--118},
+	volume = {12},
+	number = {2-3},
+	doi = {10.1080/19312458.2018.1430754},
+	url = {https://www.tandfonline.com/doi/full/10.1080/19312458.2018.1430754},
+	langid = {en}
+}
+
+@article{maier2018,
+	title = {Applying LDA Topic Modeling in Communication Research: Toward a Valid and Reliable Methodology},
+	author = {Maier, Daniel and Waldherr, A. and Miltner, P. and Wiedemann, G. and Niekler, A. and Keinert, A. and Pfetsch, B. and Heyer, G. and Reber, U. and {Häussler}, T. and Schmid-Petri, H. and Adam, S.},
+	year = {2018},
+	month = {04},
+	date = {2018-04-03},
+	journal = {Communication Methods and Measures},
+	pages = {93--118},
+	volume = {12},
+	number = {2-3},
+	doi = {10.1080/19312458.2018.1430754},
+	url = {https://www.tandfonline.com/doi/full/10.1080/19312458.2018.1430754},
+	langid = {en}
+}
+
+@inproceedings{chang2009,
+	title = {Reading tea leaves: how humans interpret topic models},
+	author = {Chang, Jonathan and Boyd-Graber, Jordan and Gerrish, Sean and Wang, Chong and Blei, David M.},
+	year = {2009},
+	month = {12},
+	date = {2009-12-07},
+	publisher = {Curran Associates Inc.},
+	pages = {288{\textendash}296},
+	series = {NIPS'09},
+	address = {Red Hook, NY, USA}
+}
+
+@article{blei2014,
+	title = {Build, Compute, Critique, Repeat: Data Analysis with Latent Variable Models},
+	author = {Blei, David M.},
+	year = {2014},
+	month = {01},
+	date = {2014-01-03},
+	journal = {Annual Review of Statistics and Its Application},
+	pages = {203--232},
+	volume = {1},
+	number = {1},
+	doi = {10.1146/annurev-statistics-022513-115657},
+	url = {https://www.annualreviews.org/doi/10.1146/annurev-statistics-022513-115657},
+	langid = {en}
+}
+
+@article{benoit2018,
+	title = {quanteda: An R package for the quantitative analysis of textual data},
+	author = {Benoit, Kenneth and Watanabe, Kohei and Wang, Haiyan and Nulty, Paul and Obeng, Adam and {Müller}, Stefan and Matsuo, Akitaka},
+	year = {2018},
+	month = {10},
+	date = {2018-10-06},
+	journal = {Journal of Open Source Software},
+	pages = {774},
+	volume = {3},
+	number = {30},
+	doi = {10.21105/JOSS.00774},
+	url = {https://joss.theoj.org/papers/10.21105/joss.00774},
+	note = {Publisher: The Open Journal}
+}
